# c_project_template

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  betray_stdout.txt  cmock.yml  copilot-instructions.md  cppcheck.suppress  seduce_tutorial.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  ci.yml  codeql.yml  coverage-windows.yml  coverage.yml  docs.yml  lint.yml  release.yml
00_c_source_files/: b_win32_main.c  relinquish.h
01_roadmaps/: plan_setup.txt  remaining_steps.txt
02_copilot_commands/: 01_iterating_through_plan.txt
cmake/modules/: CodeCoverage.cmake  CompilerFlags.cmake  MergeSourceIntegration.cmake  PlatformDetection.cmake
cmake/toolchains/: android.cmake
docs/: Doxyfile  _config.yml  index.md
docs/guides/: build-system.md  getting-started.md  testing.md
docs/reference/: build-options.md  mergesource.md  platform-notes.md
examples/graphics_demo/: CMakeLists.txt
examples/graphics_demo/src/: main.c  renderer.c
examples/hello_world/: CMakeLists.txt
examples/hello_world/src/: main.c
examples/network_client/: CMakeLists.txt
examples/network_client/src/: client.c  main.c
include/: project_api.h  project_config.h
roadmaps/: plan_setup.txt
scripts/: new_project.sh
scripts/docs/: deploy_pages.sh  generate_api.sh
scripts/lint/: analyze.sh  check.sh  format.sh
scripts/quality/: complexity.sh  dependencies.sh  duplicates.sh  metrics.sh  performance.sh  report.sh  security.sh
scripts/test/: coverage.sh  generate_mocks.sh  run_tests.sh
scripts/tools/: detect_tools.json  detect_tools.ps1  install_quality_tools.ps1
src/: main.c
tests/: CMakeLists.txt
tests/core/memory/: test_memory_smoke.c
tests/helpers/: assertion_extensions.c  deterministic_random.c  mock_generators.c  test_helpers.h
tests/unity/: unity.c  unity.h  unity_internals.h
